--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+body {background: rgb(225, 228, 232)}
+
+/** Notebook Base **/
+.notebook {
+    position: absolute;
+    width: 500px; height: 350px;
+    top: 50%; left: 50%;
+    margin: -175px 0 0 -250px;
+
+    background-color: #444;
+    background-size: 4px 4px;
+
+    border-radius: 15px;
+    box-shadow:
+            inset 2px 2px 2px rgba(255,255,255,.2),
+            2px 2px 3px rgba(0,0,0,.2);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/** Left Page **/
+.left {
+    position: absolute;
+    left: 10px; right: 50%;
+    top: 10px; bottom: 10px;
+
+    background: rgb(247, 246, 212);
+
+    border-radius: 10px 0 0 10px;
+    box-shadow:
+            inset -10px 0 30px -10px rgba(0,0,0,.3),
+            -2px 2px 1px rgba(0,0,0,.8);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/** Right Page **/
+.right {
+    position: absolute;
+    left: 50%; right: 10px;
+    top: 10px; bottom: 10px;
+
+    background: rgb(247, 246, 212);
+
+    border-radius: 0 10px 10px 0;
+    box-shadow:
+            inset 10px 0 30px -10px rgba(0,0,0,.3),
+            2px 2px 1px rgba(0,0,0,.8);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+/** Page inner **/
+.page-inner {
+    position: absolute;
+    top: 30px; bottom: 20px;
+    left: 15px; right: 15px;
+    outline: none;
+    overflow: hidden;
+    width: 85%;
+    background: linear-gradient(
+            to bottom,
+            transparent,
+            transparent 19px,
+            rgba(0,0,0,.2),
+            rgba(0,0,0,.2) 1px
+    );
+    background-size: 100% 20px;
+    box-shadow:
+            0 -1px 0 rgba(0,0,0,0.2),
+            0 -5px 0 rgb(247, 246, 212),
+            0 -6px 0 rgba(0,0,0,0.4);
 
-.App-link {
-  color: #61dafb;
+    font: 15px/20px 'Courgette';
+    color: #555;
+    text-align: left;
+    border: none;
+    resize: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.page-inner > div {text-align: left !important}
